still working on sat prod title spacing fix

--- a/client/js/saturday_products/saturday_products.scss
+++ b/client/js/saturday_products/saturday_products.scss
@@ -90,7 +90,7 @@
 }
 
 .sat-prod-text {
-    padding-left: 13%;
+    padding-left: 12%;
 }
 
 .product-name {
